add post product image

--- a/ConvenientStoreMVC/Views/Product/Index.cshtml
+++ b/ConvenientStoreMVC/Views/Product/Index.cshtml
@@ -59,3 +59,11 @@
 }
     </tbody>
 </table>
+@if (TempData["mess"] != null)
+{
+    <script>
+        window.onload=function(){
+            alert("@TempData["mess"]");
+        }
+    </script>
+    }
