--- a/ConvenientStoreMVC/Views/Product/Index.cshtml
+++ b/ConvenientStoreMVC/Views/Product/Index.cshtml
@@ -45,7 +45,7 @@
                 @Html.DisplayFor(modelItem => item.Cat.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image.Url)
+                <img src="@item.Image.Url" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Supplier.Name)
