--- a/ConvenientStoreMVC/Views/Product/Create.cshtml
+++ b/ConvenientStoreMVC/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConvenientStoreAPI.Models.Product
+﻿@model ConvenientStoreAPI.Mapper.DTO.ProductRequest
 
 @{
     ViewData["Title"] = "Create";
