--- a/ConvenientStoreMVC/Views/_ViewImports.cshtml
+++ b/ConvenientStoreMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ConvenientStoreMVC
 @using ConvenientStoreMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ChartExample
