--- a/ConvenientStoreMVC/Views/Home/Index.cshtml
+++ b/ConvenientStoreMVC/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ConvenientStoreMVC.ChartImpl
+@using ConvenientStoreAPI.Models
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -47,12 +48,12 @@
                 <div class="card-body">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-3">
-                            <i class="pe-7s-browser"></i>
+                            <i class="ti-layout-grid2 text-warning border-warning"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
-                                <div class="stat-text"><span class="count">349</span></div>
-                                <div class="stat-heading">Templates</div>
+                                <div class="stat-text"><span class="count">@ViewData["pending"]</span></div>
+                                <div class="stat-heading">Pending Order</div>
                             </div>
                         </div>
                     </div>
@@ -93,7 +94,7 @@
             var barChart = new Chart(bar, @Html.Raw(model.ChartJson) );
             var pieChart = new Chart(pie, { ...@Html.Raw(model.ChartJson), type: 'pie' });
             var radarChart = new Chart(radar, { ...@Html.Raw(model.ChartJson), type: 'radar' });
-            var radarChart = new Chart(line, { ...@Html.Raw(model.ChartJson), type: 'line' });
+            var lineChart = new Chart(line, { ...@Html.Raw(model.ChartJson), type: 'line' });
 
         });
     </script>
@@ -109,7 +110,7 @@
                         <div class="card-body">
                             <!-- <canvas id="TrafficChart"></canvas>   -->
                             <div class="traffic-chart">
-                                <canvas id="barChart"></canvas>
+                                <canvas id="pieChart"></canvas>
                             </div>
                         </div>
                     </div>
@@ -169,87 +170,43 @@
                                         <th class="avatar">Avatar</th>
                                         <th>ID</th>
                                         <th>Name</th>
-                                        <th>Product</th>
-                                        <th>Quantity</th>
+                                        <th>Order Date</th>
+                                        <th>Address</th>
                                         <th>Status</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td class="serial">1.</td>
-                                        <td class="avatar">
-                                            <div class="round-img">
-                                                <a href="#"><img class="rounded-circle" src="images/avatar/1.jpg" alt=""></a>
-                                            </div>
-                                        </td>
-                                        <td> #5469 </td>
-                                        <td>  <span class="name">Louis Stanley</span> </td>
-                                        <td> <span class="product">iMax</span> </td>
-                                        <td><span class="count">231</span></td>
-                                        <td>
-                                            <span class="badge badge-complete">Complete</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="serial">2.</td>
-                                        <td class="avatar">
-                                            <div class="round-img">
-                                                <a href="#"><img class="rounded-circle" src="images/avatar/2.jpg" alt=""></a>
-                                            </div>
-                                        </td>
-                                        <td> #5468 </td>
-                                        <td>  <span class="name">Gregory Dixon</span> </td>
-                                        <td> <span class="product">iPad</span> </td>
-                                        <td><span class="count">250</span></td>
-                                        <td>
-                                            <span class="badge badge-complete">Complete</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="serial">3.</td>
-                                        <td class="avatar">
-                                            <div class="round-img">
-                                                <a href="#"><img class="rounded-circle" src="images/avatar/3.jpg" alt=""></a>
-                                            </div>
-                                        </td>
-                                        <td> #5467 </td>
-                                        <td>  <span class="name">Catherine Dixon</span> </td>
-                                        <td> <span class="product">SSD</span> </td>
-                                        <td><span class="count">250</span></td>
-                                        <td>
-                                            <span class="badge badge-complete">Complete</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="serial">4.</td>
-                                        <td class="avatar">
-                                            <div class="round-img">
-                                                <a href="#"><img class="rounded-circle" src="images/avatar/4.jpg" alt=""></a>
-                                            </div>
-                                        </td>
-                                        <td> #5466 </td>
-                                        <td>  <span class="name">Mary Silva</span> </td>
-                                        <td> <span class="product">Magic Mouse</span> </td>
-                                        <td><span class="count">250</span></td>
-                                        <td>
-                                            <span class="badge badge-pending">Pending</span>
-                                        </td>
-                                    </tr>
-                                    <tr class=" pb-0">
-                                        <td class="serial">5.</td>
-                                        <td class="avatar pb-0">
-                                            <div class="round-img">
-                                                <a href="#"><img class="rounded-circle" src="images/avatar/6.jpg" alt=""></a>
-                                            </div>
-                                        </td>
-                                        <td> #5465 </td>
-                                        <td>  <span class="name">Johnny Stephens</span> </td>
-                                        <td> <span class="product">Monitor</span> </td>
-                                        <td><span class="count">250</span></td>
-                                        <td>
-                                            <span class="badge badge-complete">Complete</span>
-                                        </td>
-                                    </tr>
+                                    @{
+                                        int i = 0;
+                                    }
+                                    @foreach (Order order in ViewData["orders"] as List<Order>)
+                                    {
+                                        {
+                                            i++;
+                                        }
+                                        <tr onclick="window.location.href = '@Url.Action("Details", "Order", new { id = order.Id })';">
+                                            <td class="serial">@i.</td>
+                                            <td class="avatar">
+                                                <div class="round-img">
+                                                    <a href="#"><img class="rounded-circle" src="images/avatar/1.jpg" alt=""></a>
+                                                </div>
+                                            </td>
+                                            <td> @order.Id </td>
+                                            <td>  <span class="name">@order.User.Name</span> </td>
+                                            <td> <span class="product">@order.Date.ToString("dd/MM/yyyy")</span> </td>
+                                            <td><span class="name">@order.Address</span></td>
+                                            <td>
+                                                @if (order.IsProcess)
+                                                {
+                                                    <span class="badge badge-complete">Complete</span>
+                                                }
+                                                else
+                                                {
+                                                    <span class="badge badge-pending">Pending</span>
+                                                }
+                                            </td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div> <!-- /.table-stats -->
@@ -257,131 +214,23 @@
                 </div> <!-- /.card -->
             </div>  <!-- /.col-lg-8 -->
 
-            <div class="col-xl-4">
-                <div class="row">
-                    <div class="col-lg-6 col-xl-12">
-                        <div class="card br-0">
-                            <div class="card-body">
-                                <div class="chart-container ov-h">
-                                    <div id="flotPie1" class="float-chart"></div>
-                                </div>
-                            </div>
-                        </div><!-- /.card -->
+            <div class="col-xl-8">
+                <div class="card br-0">
+                    <div class="card-body">
+                        <div class="traffic-chart">
+                            <canvas id="barChart"></canvas>
+                        </div>
                     </div>
+                </div><!-- /.card -->
+            </div>
 
-                    <div class="col-lg-6 col-xl-12">
-                        <div class="card bg-flat-color-3  ">
-                            <div class="card-body">
-                                <h4 class="card-title m-0  white-color ">August 2018</h4>
-                            </div>
-                            <div class="card-body">
-                                <div id="flotLine5" class="flot-line"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- /.col-md-4 -->
+
         </div>
-    </div>
-    <!-- Modal - Calendar - Add New Event -->
-    <div class="modal fade none-border" id="event-modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title"><strong>Add New Event</strong></h4>
-                </div>
-                <div class="modal-body"></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success save-event waves-effect waves-light">Create event</button>
-                    <button type="button" class="btn btn-danger delete-event waves-effect waves-light" data-dismiss="modal">Delete</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /#event-modal -->
-    <!-- Modal - Calendar - Add Category -->
-    <div class="modal fade none-border" id="add-category">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title"><strong>Add a category </strong></h4>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label class="control-label">Category Name</label>
-                                <input class="form-control form-white" placeholder="Enter name" type="text" name="category-name" />
-                            </div>
-                            <div class="col-md-6">
-                                <label class="control-label">Choose Category Color</label>
-                                <select class="form-control form-white" data-placeholder="Choose a color..." name="category-color">
-                                    <option value="success">Success</option>
-                                    <option value="danger">Danger</option>
-                                    <option value="info">Info</option>
-                                    <option value="pink">Pink</option>
-                                    <option value="primary">Primary</option>
-                                    <option value="warning">Warning</option>
-                                </select>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-danger waves-effect waves-light save-category" data-dismiss="modal">Save</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /#add-category -->
+    </div> <!-- /.col-md-4 -->
 </div>
 <!-- /.content -->
 <div class="clearfix"></div>
 <!-- Footer -->
-<footer class="site-footer">
-    <div class="footer-inner bg-white">
-        <div class="row">
-            <div class="col-sm-6">
-                Copyright &copy; 2018 Ela Admin
-            </div>
-            <div class="col-sm-6 text-right">
-                Designed by <a href="https://colorlib.com">Colorlib</a>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- /.site-footer -->
-    </div>
-<!-- /#right-panel -->
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
-<script src="assets/js/main.js"></script>
-
-<!--  Chart js -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.7.3/dist/Chart.bundle.min.js"></script>
-
-<!--Chartist Chart-->
-<script src="https://cdn.jsdelivr.net/npm/chartist@0.11.0/dist/chartist.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartist-plugin-legend@0.6.2/chartist-plugin-legend.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/jquery.flot@0.8.3/jquery.flot.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/flot-pie@1.0.0/src/jquery.flot.pie.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/flot-spline@0.0.1/js/jquery.flot.spline.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/simpleweather@3.1.0/jquery.simpleWeather.min.js"></script>
-<script src="assets/js/init/weather-init.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/moment@2.22.2/moment.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.9.0/dist/fullcalendar.min.js"></script>
-<script src="assets/js/init/fullcalendar-init.js"></script>
-
 <!--Local Stuff-->
 <script>
     jQuery(document).ready(function ($) {
