--- a/ConvenientStoreMVC/Views/Product/Edit.cshtml
+++ b/ConvenientStoreMVC/Views/Product/Edit.cshtml
@@ -33,11 +33,8 @@
                 <select asp-for="CatId" class="form-control" asp-items="ViewBag.cat"></select>
             </div>
             <div class="form-group">
-                @{
-                    Image img = ViewData["img"] as Image;
-                }
                 <label asp-for="ImageId" class="control-label">Image</label>
-                <img src="@img.Url" style="width: 300px; height: 100px; object-fit:cover" />
+                <img src="@ViewData["img"]" style="width: 300px; height: 100px; object-fit:cover" />
                 <input type="file" name="image" required />
             </div>
             <div class="form-group">
@@ -51,6 +48,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
