--- a/ConvenientStoreMVC/Views/Product/Index.cshtml
+++ b/ConvenientStoreMVC/Views/Product/Index.cshtml
@@ -5,68 +5,46 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="animated fadeIn">
+    <div class="row">
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cat)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Supplier)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (Product item in ViewData["list"] as List<Product>)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cat.Name)
-                </td>
-                <td>
-                    <img src="@item.Image.Url" style="width: 400px; height:200px; object-fit:cover" />
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Supplier.Name)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-@for (int i = 1; i < (int)ViewData["pages"]; i++){
-    <a class="btn btn-primary" asp-action="Index" asp-route-pages="@i">@i</a>
-}
-@if (TempData["mess"] != null)
-{
-    <script>
-        window.onload = function () {
-            alert("@TempData["mess"]");
-        }
-    </script>
-}
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <strong class="card-title">List Of Product</strong>
+                </div>
+                <div class="card-body">
+                    <table id="bootstrap-data-table" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Product Name</th>
+                                <th>Category</th>
+                                <th>Supplier</th>
+                                <th>Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (Product p in ViewData["list"] as List<Product>)
+                            {
+                                <tr onclick="window.location.href = '@Url.Action("Details", "Product", new { id = p.Id })';">
+                                    <td>@p.Name</td>
+                                    <td>@p.Cat.Name</td>
+                                    <td>@p.Supplier.Name</td>
+                                    <td>$@p.Price</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- .animated -->
+
+
+<div class="clearfix"></div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#bootstrap-data-table-export').DataTable();
+    });
+</script>
