--- a/ConvenientStoreMVC/Views/Shared/_Layout.cshtml
+++ b/ConvenientStoreMVC/Views/Shared/_Layout.cshtml
@@ -95,6 +95,12 @@
                             <li><i class="fa fa-table"></i><a asp-action="Create" asp-controller="Product">Add New Product</a></li>
                         </ul>
                     </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Order</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><i class="fa fa-table"></i><a asp-action="Index" asp-controller="Order">List Of Order</a></li>
+                        </ul>
+                    </li>
 
                     <li class="menu-title">Pages</li><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
